# solver_CSP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main
include/: CSP.h  CSP_problems.h  backtrack.h  constraint.h  variable.h
src/: CMakeLists.txt  CSP.cpp  CSP_problems.cpp  Makefile  cmake_install.cmake  constraint.cpp  graph_coloring.cpp  main.cpp  n_queens.cpp  variable.cpp
sudokus/: 16-easy1.txt  16-easy2.txt  16-easy3.txt  16-easy4.txt  16-easy5.txt  16-expert1.txt  16-expert2.txt  16-expert3.txt  16-expert4.txt  16-expert5.txt  16-intermediate1.txt  16-intermediate2.txt  16-intermediate3.txt  16-intermediate4.txt  16-intermediate5.txt  25-easy1.txt  25-easy2.txt  25-easy3.txt  25-easy4.txt  25-easy5.txt  25-expert1.txt  25-expert2.txt  25-expert3.txt  25-expert4.txt  25-expert5.txt  25-intermediate1.txt  25-intermediate2.txt  25-intermediate3.txt  25-intermediate4.txt  25-intermediate5.txt  9-easy1.txt  9-easy10.txt  9-easy2.txt  9-easy3.txt  9-easy4.txt  9-easy5.txt  9-easy6.txt  9-easy7.txt  9-easy8.txt  9-easy9.txt  (+21 more)
